force-app/main/default/objects/JMS_Log_Config__c/JMS_Log_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings to manage the custom logging using Logger framework</description>
    <label>JMS Log Config</label>
</CustomObject>