force-app/main/default/objects/JMS_Log_Config__c/fields/JMS_Debug_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>JMS_Debug_Record_Type__c</fullName>
    <description>This is the name of the record type which is used to present debug information on the log object.</description>
    <label>Debug Record Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>