force-app/main/default/objects/JMS_Log_Config__c/fields/JMS_Exceptions_Enabled__c.field-meta.xml
<CustomField>
    <fullName>JMS_Exceptions_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a flag to denote if exceptions should be logged to the database</description>
    <label>Exceptions Enabled</label>
    <type>Checkbox</type>
</CustomField>