force-app/main/default/objects/JMS_Log_Config__c/fields/JMS_Logging_Enabled__c.field-meta.xml
<CustomField>
    <fullName>JMS_Logging_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a flag to denote if debug information should be logged to the database</description>
    <label>Logging Enabled</label>
    <type>Checkbox</type>
</CustomField>